Add newsletter link

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <body>
  <h1> LibreHouse </h1>
  <div> It works! Visit our <a href="//github.com/librehs">GitHub</a> for other pretty things!</div>
+ <div> * You can subscribe out newsletter at <a href="//tinyletter.com/librehs">TinyLetter</a>.</div>
 </body>
